:hammer: Backend: Add search in Ruangan API
